tests/ui/pattern/usefulness/type_polymorphic_byte_str_literals.stderr
error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/type_polymorphic_byte_str_literals.rs:11:11
   |
LL |     match data {
   |           ^^^^ pattern `&[_, ..]` not covered
   |
   = note: the matched value is of type `&[u8]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         b"" => 1,
LL ~         &[_, ..] => todo!(),
   |

error[E0004]: non-exhaustive patterns: `&[]`, `&[_]`, `&[_, _]` and 1 more not covered
  --> $DIR/type_polymorphic_byte_str_literals.rs:23:11
   |
LL |     match data {
   |           ^^^^ patterns `&[]`, `&[_]`, `&[_, _]` and 1 more not covered
   |
   = note: the matched value is of type `&[u8]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
   |
LL ~         [_, _, _] => 1,
LL ~         _ => todo!(),
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
